--- a/app.wxss
+++ b/app.wxss
@@ -509,6 +509,12 @@ page{
 .vh10{
   height: 10vh;
 }
+.vh12{
+  height: 12vh;
+}
+.vh15{
+  height: 15vh;
+}
 .vh20{
   height: 20vh;
 }
@@ -599,7 +605,7 @@ page{
 .fz12{
   font-size: 12rpx;
 }
-.blod{
+.bold{
   font-weight: bold;
 }
 
@@ -912,6 +918,34 @@ t-image {
 
 .dialogConfirm .t-dialog__footer .t-button{
   color: #229cfb
+}
+
+
+
+
+
+
+
+
+
+.card{
+  overflow: hidden;
+  box-shadow: 0px 5px 20px #00000014;
+  position: relative;
+  box-sizing: border-box;
+  background-color: white;
+  border-radius: 16rpx;
+  width: 90vw;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 10px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-top: 20px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  color: black;
 }
 
 
