--- a/components/orderCard/orderCard.wxml
+++ b/components/orderCard/orderCard.wxml
@@ -29,12 +29,14 @@
 		<image class="size-l radius-m image" catchtap="showImage" src="{{detailInfo.imgSrc}}" mode="aspectFill" />
 		<view class="por ml10 fz30 flex jcsa fdc w100" style="height: 144rpx;">
 			<view class="flex w100">
-				<view class="{{(showEnterPrice && (enterPricce !== '0.00'))?'w70':'w100'}}">生产进度：{{detailInfo.allNumber}}({{detailInfo.nowNumber-detailInfo.allNumber<0?(detailInfo.nowNumber-detailInfo.allNumber):((detailInfo.nowNumber-detailInfo.allNumber)===0?0:'+'+(detailInfo.nowNumber-detailInfo.allNumber))}}) </view>
+				<view wx:if="{{!detailInfo.productLen}}" class="{{(showEnterPrice && (enterPricce !== '0.00'))?'w70':'w100'}}">生产进度：{{detailInfo.allNumber}}({{detailInfo.nowNumber-detailInfo.allNumber<0?(detailInfo.nowNumber-detailInfo.allNumber):((detailInfo.nowNumber-detailInfo.allNumber)===0?0:'+'+(detailInfo.nowNumber-detailInfo.allNumber))}}) </view>
+				<view wx:if="{{detailInfo.productLen}}">产品种类：{{detailInfo.productLen}}</view>
 				<view class="w30 tc" wx:if="{{showEnterPrice && (enterPricce !== '0.00')}}">{{enterPricce}} 元</view>
 				<view class="w30 tc colorRed" wx:if="{{showEnterPrice && isLeader && (enterPricce === '0.00')}}" bindtap="toOrderDetail">点击定价</view>
 			</view>
 			<view>交付时间：{{detailInfo.time}}</view>
 			<view wx:if="{{showPrice}}" class="poa fz30 color27A2" style="right:0;bottom:24%">￥{{detailInfo.price}}</view>
+			<view wx:if="{{detailInfo.productLen}}" class="poa fz30" style="right:0;bottom:11%">{{detailInfo.allNumber}}({{detailInfo.nowNumber-detailInfo.allNumber<0?(detailInfo.nowNumber-detailInfo.allNumber):((detailInfo.nowNumber-detailInfo.allNumber)===0?0:'+'+(detailInfo.nowNumber-detailInfo.allNumber))}})</view>
 		</view>
 		<van-icon name="checked" size="16px" class="{{detailInfo.isBind?'check':'color9E'}} poa" style="right: 20rpx;bottom: 20rpx;" wx:if="{{showIcon}}"></van-icon>
 		<view wx:if="{{detailInfo.status === 1}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">待定价</view>
