--- a/pages/ourFactory/ourFactory.wxml
+++ b/pages/ourFactory/ourFactory.wxml
@@ -21,25 +21,25 @@
 			<t-dropdown-item label="单位" optionsLayout="tree" options="{{clientList.options}}" value="{{clientList.value}}" bindchange="changeClient" />
 		</t-dropdown-menu>
 		<scroll-view scroll-y="true" bindscrolltolower="pullUpLoad" style="height:calc(100vh - 155px)">
-			<order-card wx:for="{{orderList}}" data-index="{{index}}" wx:for-item="item" wx:key="item" wx:for-index="index" showChangeIcon="{{true}}" detailInfo="{{item}}" bindtap="toOutsourcingAcceptance"></order-card>
+			<order-card wx:for="{{orderList}}" data-index="{{index}}" wx:for-item="item" wx:key="item" wx:for-index="index" detailInfo="{{item}}" bindtap="toOutsourcingAcceptance"></order-card>
 			<view style="height: 20px;"></view>
 			<l-loadmore show="{{showLoading}}" line="{{true}}" loading-text="努力加载中~"></l-loadmore>
 			<l-loadmore show="{{isEnd}}" type="end" line="{{true}}" end-text="我也是有底线的"></l-loadmore>
 		</scroll-view>
 	</view>
 	<view wx:elif="{{ type === '3' && isLogin}}">
-		<order-card showChangeIcon="{{true}}" detailInfo="{{detailInfo}}">
+		<order-card detailInfo="{{detailInfo}}">
 			<list-card slot="after" showShort="{{true}}" isSlot="{{true}}" cardInfoData="{{cardInfoData}}"></list-card>
 		</order-card>
 	</view>
 	<view wx:elif="{{ type === '1' && isLogin}}">
-		<order-card showChangeIcon="{{true}}" detailInfo="{{detailInfo}}">
+		<order-card detailInfo="{{detailInfo}}">
 			<list-card slot="after" showShort="{{true}}" isSlot="{{true}}" cardInfoData="{{cardInfoData}}"></list-card>
 		</order-card>
 	</view>
-	<view wx:if="{{ type === '2' && isLogin }}" class="pof bgColor27A2 colorWhite tc" style="right:10%;bottom:10%;width:30px;height: 30px; line-height:32px;border-radius:200px;" bindtap="GetSandCode">
+	<!-- <view wx:if="{{ type === '2' && isLogin }}" class="pof bgColor27A2 colorWhite tc" style="right:10%;bottom:10%;width:30px;height: 30px; line-height:32px;border-radius:200px;" bindtap="GetSandCode">
 		<van-icon name="scan" size="18px" />
-	</view>
+	</view> -->
 	<!-- 第一次查询无数据 -->
 	<view class="flex fdc vh60 color91 w100 jcc aic" wx:if="{{!isLogin || noData}}">
 		<view class="tc size-xl">
