--- a/pages/ourFactory/ourFactory.wxml
+++ b/pages/ourFactory/ourFactory.wxml
@@ -4,7 +4,8 @@
 		<view slot="after">
 			<!-- <van-search value="{{ keyWord }}" placeholder="搜索" bind:change="onSearch" /> -->
 			<view class="poa" style=" left:8%;top:15%;border-right: 1px solid #eaeaea;padding-right:10rpx;" bindtap="showChangeSearch">{{searchType===1?'订单':'计划单'}}</view>
-			<input style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 150rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:55%" type="text" bindinput="onSearch" placeholder="搜索" />
+			<input wx:if="{{isLogin}}" style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 150rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:55%" type="text" bindinput="onSearch" placeholder="搜索" />
+			<input wx:else disabled style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 150rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:55%" type="text" bindinput="onSearch" placeholder="搜索" />
 			<view class="poa bgColorWhite tl" wx:if="{{showSearch}}" style="left:8%;top:80%;z-index: 999999;border:1px solid #eaeaea;padding: 20rpx 40rpx;">
 				<view bindtap="changeSearchType" data-index="{{1}}">订单</view>
 				<view class="line"></view>
@@ -37,9 +38,9 @@
 			<list-card slot="after" showShort="{{true}}" isSlot="{{true}}" cardInfoData="{{cardInfoData}}"></list-card>
 		</order-card>
 	</view>
-	<!-- <view wx:if="{{ type === '2' && isLogin }}" class="pof bgColor27A2 colorWhite tc" style="right:10%;bottom:10%;width:30px;height: 30px; line-height:32px;border-radius:200px;" bindtap="GetSandCode">
+	<view wx:if="{{ type === '2' && isLogin }}" class="pof bgColor27A2 colorWhite tc" style="right:10%;bottom:10%;width:30px;height: 30px; line-height:32px;border-radius:200px;" bindtap="GetSandCode">
 		<van-icon name="scan" size="18px" />
-	</view> -->
+	</view>
 	<!-- 第一次查询无数据 -->
 	<view class="flex fdc vh60 color91 w100 jcc aic" wx:if="{{!isLogin || noData}}">
 		<view class="tc size-xl">
