--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,17 +1,36 @@
 <!--index.wxml-->
 <view class="container" id="index">
-  <view class="card" wx:for="{{list}}" wx:for-item="item" wx:key="item" wx:for-index="index" data-src="{{item.src}}" bindtap="toDetailPage">
-    <view>{{item.title}}</view>
-    <view class="tc bold vh12" style="line-height: 12vh;">
-      {{item.number}}
-    </view>
-    <view class="tr">
-      昨日：
-      <span wx:if="{{item.minusNumber}}">
-        <span class="color27A2">-{{item.minusNumber}}</span>
-        ，
-      </span>
-      {{item.plusNumber}}
-    </view>
-  </view>
+	<nav-content showBack="{{false}}">
+		<view slot="after">
+			首页
+		</view>
+	</nav-content>
+	<view wx:if="{{isLogin}}" class="card" wx:for="{{list}}" wx:for-item="item" wx:key="item" wx:for-index="index" data-src="{{item.src}}" bindtap="toDetailPage">
+		<view>{{item.title}}</view>
+		<view class="tc bold vh12" style="line-height: 12vh;">
+			{{item.number}}
+		</view>
+		<view class="tr">
+			昨日：
+			<span wx:if="{{item.minusNumber}}">
+				<span class="color27A2">-{{item.minusNumber}}</span>
+				，
+			</span>
+			{{item.plusNumber}}
+		</view>
+	</view>
+	<!-- 第一次查询无数据 -->
+	<view class="flex fdc vh60 color91 w100 jcc aic" wx:if="{{!isLogin || noData}}">
+		<view class="tc size-xl">
+			<image class="image" src="https://file.zwyknit.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220216112643.png"></image>
+			<view class="mt20">没有符合条件的数据</view>
+		</view>
+	</view>
+	<view wx:if="{{!isLogin}}">
+		<view class="mt20 submit">
+			<van-button type="primary" size="small" bindtap="toLogin">登录</van-button>
+		</view>
+	</view>
+	<van-dialog id="van-dialog" confirm-button-color="#27A2FD" />
+	<l-message content="{{content}}" />
 </view>
