--- a/components/orderCard/orderCard.wxml
+++ b/components/orderCard/orderCard.wxml
@@ -1,6 +1,6 @@
 <!--components/orderCard.wxml-->
 <!-- wx:if="{{detailInfo.bigThan30}}" -->
-<view wx:if="{{smallThan24h}}" bindtap="changeCheck" class="ml10 mr10 mt20 bgColorWhite jcsb flexWarp borderRadius16 borderBox pt10 pb10 colorBlack por overfh {{isBig?'':'vw98 shadow pl10 pr10'}}">
+<view id="orderCard" wx:if="{{smallThan24h}}" bindtap="changeCheck" class="ml10 mr10 mt20 bgColorWhite jcsb flexWarp borderRadius16 borderBox pt10 pb10 colorBlack por overfh {{isBig?'':'vw98 shadow pl10 pr10'}}">
 	<view class="flex jcsb aic">
 		<view class="fz35 flex blod aic" bind:click="someFunction" catchtap="changeShow">
 			<view class="overfh vw53" style="text-overflow:ellipsis;white-space: nowrap;" wx:if="{{detailInfo.display === 0}}">{{detailInfo.title || detailInfo.code}}</view>
@@ -36,7 +36,7 @@
 			</view>
 			<view>交付时间：{{detailInfo.time}}</view>
 			<view wx:if="{{showPrice}}" class="poa fz30 color27A2" style="right:0;bottom:24%">￥{{detailInfo.price}}</view>
-			<view wx:if="{{detailInfo.productLen}}" class="poa fz30" style="right:0;bottom:11%">{{detailInfo.allNumber}}({{detailInfo.nowNumber-detailInfo.allNumber<0?(detailInfo.nowNumber-detailInfo.allNumber):((detailInfo.nowNumber-detailInfo.allNumber)===0?0:'+'+(detailInfo.nowNumber-detailInfo.allNumber))}})</view>
+			<view wx:if="{{detailInfo.productLen && !notShowProLen}}" class="poa fz30" style="right:0;bottom:11%">{{detailInfo.allNumber}}({{detailInfo.nowNumber-detailInfo.allNumber<0?(detailInfo.nowNumber-detailInfo.allNumber):((detailInfo.nowNumber-detailInfo.allNumber)===0?0:'+'+(detailInfo.nowNumber-detailInfo.allNumber))}})</view>
 		</view>
 		<van-icon name="checked" size="16px" class="{{detailInfo.isBind?'check':'color9E'}} poa" style="right: 20rpx;bottom: 20rpx;" wx:if="{{showIcon}}"></van-icon>
 		<view wx:if="{{detailInfo.status === 1}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">待定价</view>
@@ -45,6 +45,8 @@
 		<view wx:if="{{detailInfo.status === 4}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">新派单</view>
 		<view wx:if="{{detailInfo.status === 5}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">待验收</view>
 		<view wx:if="{{detailInfo.status === 6}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">已验收</view>
+		<view wx:if="{{detailInfo.status === 7}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">未审核</view>
+		<view wx:if="{{detailInfo.status === 8}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">已通过</view>
 	</view>
 	<!-- 弹出框 -->
 	<van-popup catchtap show="{{showPopup}}" bindtap="closePopup">
