--- a/pages/quotedPrice/quotedPrice.wxml
+++ b/pages/quotedPrice/quotedPrice.wxml
@@ -2,8 +2,12 @@
 <view id="quotedPrice">
 	<nav-content showHome="{{false}}">
 		<view slot="after">
-			<input wx:if="{{isLogin}}" style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 20rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:85%" type="text" bindinput="onSearch" placeholder="单据编号/产品编号" />
-			<input wx:else disabled style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 20rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:85%" type="text" bindinput="onSearch" placeholder="单据编号/产品编号" />
+			<input wx:if="{{isLogin}}"
+				style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 20rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:85%"
+				type="text" bindinput="onSearch" placeholder="单据编号/产品编号" />
+			<input wx:else disabled
+				style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 20rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:85%"
+				type="text" bindinput="onSearch" placeholder="单据编号/产品编号" />
 		</view>
 	</nav-content>
 	<t-dropdown-menu>
@@ -14,10 +18,14 @@
 	</t-dropdown-menu>
 
 	<view class="overfsy vh75">
-		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item" wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
-		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item" wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
-		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item" wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
-		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item" wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
+		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item"
+			wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
+		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item"
+			wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
+		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item"
+			wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
+		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item"
+			wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
 		<view style="height: 5vh;"></view>
 	</view>
 
@@ -33,7 +41,7 @@
 	</view>
 	<view wx:if="{{isLogin}}">
 		<view class="mt20 submit" style="position: fixed;bottom:5%;left:50%;transform: translateX(-50%);">
-			<van-button type="primary" size="small" bindtap="addTab">创建报价单</van-button>
+			<van-button type="primary" size="small" bindtap="toCreate">创建报价单</van-button>
 		</view>
 	</view>
 	<van-dialog id="van-dialog" confirm-button-color="#27A2FD" />
